--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -249,6 +249,39 @@ write.table(degOL, file="./results/degOL.xls", quote=FALSE, sep="\t", col.names 
 degOL[1:20,]
 ```
 
+# Connectivity maps enrichment analysis compared to drug and disease references
+
+## Query drug reference
+
+```{r drug_enrichment, eval=TRUE}
+library(DrugVsDisease); library(DvDdata)
+PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#", check.names=FALSE)
+data(drugRL, package="DvDdata")
+PMID26490707sub <- PMID26490707[PMID26490707[,"NEW-Gene-ID"] %in% rownames(drugRL),]
+testprofiles <- list(ranklist=matrix(PMID26490707sub$Zscore, dimnames=list(PMID26490707sub[,"NEW-Gene-ID"])), 
+                     pvalues=matrix(PMID26490707sub$P, dimnames=list(PMID26490707sub[,"NEW-Gene-ID"])))
+drugcmap <- classifyprofile(data=testprofiles$ranklist, case="disease", signif.fdr=0.5, no.signif=20)
+drugcmap2 <- classifyprofile(data=testprofiles$ranklist, case="disease", 
+                            pvalues=testprofiles$pvalues, cytoout=FALSE, type="dynamic", 
+                            dynamic.fdr=0.5, signif.fdr=0.05, adj="BH", no.signif=100)
+drugcmap2[[1]][1:20,]
+```
+
+## Query disease reference
+
+```{r disease_enrichment, eval=FALSE}
+PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#", check.names=FALSE)
+data(diseaseRL, package="DvDdata")
+PMID26490707sub <- PMID26490707[PMID26490707[,"NEW-Gene-ID"] %in% rownames(diseaseRL),]
+testprofiles <- list(ranklist=matrix(PMID26490707sub$Zscore, dimnames=list(PMID26490707sub[,"NEW-Gene-ID"])), 
+                     pvalues=matrix(PMID26490707sub$P, dimnames=list(PMID26490707sub[,"NEW-Gene-ID"])))
+diseasecmap <- classifyprofile(data=testprofiles$ranklist, case="drug", signif.fdr=0.5, no.signif=20)
+diseasecmap2 <- classifyprofile(data=testprofiles$ranklist, case="drug", 
+                            pvalues=testprofiles$pvalues, cytoout=FALSE, type="dynamic", 
+                            dynamic.fdr=0.5, adj="BH", no.signif=100)
+diseasecmap2[[1]][1:20,]
+```
+
 # Funding
 This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
 
