--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -292,9 +292,13 @@ diseasecmap2[[1]][1:20,]
 
 In progress...
 
+<div align="right">[Back to Table of Contents]()</div>
+
 # Age-disease network analysis
 
 In progress...
+
+<div align="right">[Back to Table of Contents]()</div>
 
 # Funding
 This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
