--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -256,7 +256,7 @@ degOL[1:20,]
 ## Query drug signatures
 
 ```{r drug_enrichment, eval=TRUE, message=FALSE}
-library(DrugVsDisease); library(DvDdata)
+library(DrugVsDisease)
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#", check.names=FALSE)
 data(drugRL)
 PMID26490707sub <- PMID26490707[PMID26490707[,"NEW-Gene-ID"] %in% rownames(drugRL),]
