--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -254,6 +254,19 @@ write.table(degOL, file="./results/degOL.xls", quote=FALSE, sep="\t", col.names 
 degOL[1:20,]
 ```
 
+## Drugs affecting known longevity genes
+
+This addresses one of Dan's questions in last conference call which drugs are affecting the
+expression of IGF1 or IGF1R.
+
+```{r deg_queries, eval=TRUE}
+affyids <- row.names(myAnnot[myAnnot$SYMBOL %in% c("IGF1", "IGF1R"),])
+degMA <- readRDS("./results/degMA.rds") # Faster then read.delim()
+q <- colSums(degMA[affyids,])
+q <- q[q > 0]
+as.data.frame(rev(sort(q))[1:20])
+```
+
 <div align="right">[Back to Table of Contents]()</div>
 
 # Connectivity maps enrichment analysis
