--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "_longevityTools_: Connecting Drug- and Age-related Gene Expression Signatures" 
+subtitle: "..."
 author: "Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
+package: "`r pkg_ver('ChemmineR')`"
 output:
   BiocStyle::html_document:
     toc: true
