--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "[_longevityTools_](http://www.longevitygenomics.org/projects/): Connecting Drug- and Age-related Gene Expression Signatures" 
+title: "_longevityTools_: Connecting Drug- and Age-related Gene Expression Signatures" 
 author: "Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
 package: "`r pkg_ver('longevityTools')`"
+abstract: >
+  This vigentte is part of the Longevity Genomics project. For details see [here](http://www.longevitygenomics.org/projects/).
 output:
   BiocStyle::html_document:
     toc: true
