--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -3,11 +3,6 @@ title: "_longevityTools_: Connecting Drug- and Age-related Gene Expression Signa
 author: "Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
 package: "`r pkg_ver('longevityTools')`"
-abstract: >
-  This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its 
-  website [here](http://www.longevitygenomics.org/projects/). The GitHub repository of the corresponding R package 
-  is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this 
-  tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.
 output:
   BiocStyle::html_document:
     toc: true
@@ -50,6 +45,12 @@ suppressPackageStartupMessages({
     library(ggplot2) }) 
 ```
 
+# Longevity Genomics Project
+
+This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its 
+website [here](http://www.longevitygenomics.org/projects/). The GitHub repository of the corresponding R package 
+is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this 
+tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.
 
 # Introduction 
 This study analyzes drug- and age-related genome-wide expression data from public microarray 
