--- a/vignettes/longevityTools.Rmd
+++ b/vignettes/longevityTools.Rmd
@@ -2,6 +2,7 @@
 title: "_longevityTools_: Analysis Tools for Longevity Research" 
 author: "Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
+package: "`r pkg_ver('longevityTools')`"
 output:
   BiocStyle::html_document:
     toc: true
