--- a/vignettes/longevityTools_eQTL.Rmd
+++ b/vignettes/longevityTools_eQTL.Rmd
@@ -2,6 +2,7 @@
 title: "_longevityTools_: eQTL, eSNP and GWAS Analysis" 
 author: "Authors: Danjuma Quarless, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
+package: "`r pkg_ver('longevityTools')`"
 output:
   BiocStyle::html_document:
     toc: true
@@ -44,9 +45,12 @@ suppressPackageStartupMessages({
     library(ggplot2) }) 
 ```
 
-Note: the GitHub repository of this package is <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a>.
-
 # Introduction 
+This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its 
+website [here](http://www.longevitygenomics.org/projects/). The GitHub repository of the corresponding R package 
+is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this 
+vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a>.
+
 text text text text text text text text text text text text
 text text text text text text text text text text text text
 text text text text text text text text text text text text
