--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -69,7 +69,7 @@ The R software for running [_`longevityTools`_](https://github.com/tgirke/longev
 
 ```{r install, eval=FALSE}
 source("http://bioconductor.org/biocLite.R") # Sources the biocLite.R installation script 
-biocLite("tgirke/longevityTools", build_vignettes=TRUE, dependencies=TRUE) # Installs package from GitHub
+biocLite("tgirke/longevityTools", build_vignettes=FALSE) # Installs package from GitHub
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
