--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -51,12 +51,14 @@ website [here](http://www.longevitygenomics.org/projects/). The GitHub repositor
 is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this 
 vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.
 
-The workflow of this vignette analyzes drug- and age-related genome-wide expression data from public microarray 
-and RNA-Seq experiments. One of the main objective is the identification drug candidates 
-modulating the expression of longevity genes and pathways. For this, we compare age-related expression signatures with those from 
-drug treamtments. The age-related query signatures are from recent publications such as 
-Peters et al. [-@Peters2015-fc] and Sood et al. [-@Sood2015-pb], while the drug-related reference 
-signatures are from the Connectivity Map (CMAP) and LINCS projects [@Lamb2006-uv].
+The project component covered by this vignette analyzes drug- and age-related
+genome-wide expression data from public microarray and RNA-Seq experiments. One
+of the main objective is the identification drug candidates modulating the
+expression of longevity genes and pathways. For this, we compare age-related
+expression signatures with those from drug treamtments. The age-related query
+signatures are from recent publications such as Peters et al. [-@Peters2015-fc]
+and Sood et al. [-@Sood2015-pb], while the drug-related reference signatures
+are from the Connectivity Map (CMAP) and LINCS projects [@Lamb2006-uv].
 
 <div align="right">[Back to Table of Contents]()</div>
 
