--- a/vignettes/longevityTools_eQTL.Rmd
+++ b/vignettes/longevityTools_eQTL.Rmd
@@ -81,7 +81,7 @@ vignette("longevityTools") # Opens vignette
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
-# Import custom functions 
+## Import custom functions 
 
 Preliminary functions that are still under developement, or not fully tested and documented 
 can be imported with the `source` command from the `inst/extdata` directory of the package.
@@ -92,7 +92,7 @@ source(fctpath)
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
-## Sample data from GTEx
+# Sample data from GTEx
 The eQTL data used in this vignette can be downloaded from the [GTEx site](http://www.gtexportal.org/home/datasets).
 Note, the following downloads a 1.3GB file, which will take some time.
 
@@ -101,7 +101,7 @@ download.file("http://www.gtexportal.org/static/datasets/gtex_analysis_v6/single
 untar("GTEx_Analysis_V6_eQTLs.tar.gz")
 ```
 
-## Utilities
+# Utilities
 The _`geneGrep`_ function takes GTEx results and gene list as arguments,
 returns GTEx eSNP results for genes in gene list. Genes without significant
 eSNPs are removed from results. The following sample file _Whole\_Blood\_Analysis.snpgenes_ 
