--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -96,6 +96,16 @@ source(fctpath)
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
+# Create analysis environment
+
+The following creates the directory structure expected by this workflow. Input data
+will be stored in the `data` directory and results will written to the `results` directory.
+All paths are given relative to the present working directory of the user's R session.
+
+```{r source_fct, eval=FALSE}
+dir.create("data"); dir.create("data/CEL"); dir.create("results") 
+```
+
 # Data downloads
 
 ## Download data from Connectivity Map project site
@@ -103,12 +113,11 @@ The drug-related expression data are downloaded from the CMAP web site
 [here](http://www.broadinstitute.org/cmap). The `getCmap` function downloads
 the CMAP rank matrix along with the compound annotations, and `getCmapCEL`
 downloads the corresponding 7,056 CEL files. The functions will write the
-downloaded files to a `data` directory within the present workding directory of
-the user's R session. This `data` directory plus a `data/CEL` sub-directory
-need to be created by the user prior to running the download functions. Since
-some of the raw data sets are large, the functions will only rerun the download
-if the argument `rerun` is assigned `TRUE`. If the raw data are not needed then users
-can skip this time consuming download step and work with the preprocessed data 
+downloaded files to the `data` and `data/CEL` directories within the present 
+working directory of the user's R session. Since some of the raw data sets 
+are large, the functions will only rerun the download if the argument `rerun` 
+is assigned `TRUE`. If the raw data are not needed then users can skip this 
+time consuming download step and work with the preprocessed data 
 obtained in the next section.
 
 ```{r download_cmap, eval=FALSE}
