--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -96,7 +96,7 @@ source(fctpath)
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
-# Create analysis environment
+# Create work environment
 
 The following creates the directory structure expected by this workflow. Input data
 will be stored in the `data` directory and results will written to the `results` directory.
